// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Horizontal DragHandle renders correctly 1`] = `
<div
  className="root horizontal"
/>
`;

exports[`Vertical DragHandle renders correctly 1`] = `
<div
  className="root vertical"
/>
`;
